--- a/test1.html
+++ b/test1.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/iframe-resizer/3.5.16/iframeResizer.contentWindow.min.js" type="text/javascript"></script>
 
 <script type="text/javascript">
