--- a/learnr_app1/learnr_app1.html
+++ b/learnr_app1/learnr_app1.html
@@ -193,51 +193,63 @@ summary {
 </div>
 
 
-<div id="section-topic-1" class="section level2">
-<h2>Topic 1</h2>
-<div id="section-exercise" class="section level3">
-<h3>Exercise</h3>
-<p><em>Here’s a simple exercise with an empty code chunk provided for entering the answer.</em></p>
-Write the R code required to call up the first few rows of mtcars:
+<div id="section-anova-made-easy-section-1" class="section level1">
+<h1>ANOVA made easy: Section 1</h1>
+<div id="section-importing-and-preparing-the-data" class="section level2">
+<h2>Importing and preparing the data</h2>
+<p>For ANOVAs we need to prepare our data in two ways:</p>
+<ol style="list-style-type: decimal">
+<li>If we have many observations per subject / condition, we must aggregate the data to a single value per subject / condition. This can be done with, for example, one of the following:</li>
+</ol>
+<p><code>aggregate()</code></p>
+<p><code>dplyr</code>’s <code>summarise()</code></p>
+<p><code>prepdat</code>’s <code>prep()</code></p>
+<p>(Note: if you’re using (G)LMMs you can, but don’t have to aggregate.</p>
+<ol start="2" style="list-style-type: decimal">
+<li>The data must be in the long format.</li>
+</ol>
+<p>We have imported the data at the top using the code <code>angle_noise &lt;- read.csv('angle-noise_wide.csv')</code> - but it is in wide format</p>
+<div id="section-wide-vs-long-data." class="section level3">
+<h3>Wide vs long data.</h3>
+<p>WIDE DATA has:</p>
+<ol style="list-style-type: decimal">
+<li><p>A row for each subject,</p></li>
+<li><p>Between-subject variables have a column</p></li>
+<li><p>Repeated measures are stored across columns, and the within-subject are stored in column names</p></li>
+</ol>
+</div>
+<div id="section-exercise-1-look-at-the-data-with-hint" class="section level3">
+<h3>Exercise 1: Look at the data (with Hint)</h3>
+<p>Let’s have a look at this dataset. If we just type in the name of the data, we can see a whole bunch of rows and columns. Let’s look at just the first few rows.</p>
+<p>Modify the following code to limit the number of rows printed to 6:</p>
 <div class="tutorial-exercise" data-label="print-limit" data-caption="Code" data-completion="1" data-diagnostics="1" data-startover="1" data-lines="0">
-<pre class="text"><code>mtcars</code></pre>
-<pre><code>                     mpg cyl  disp  hp drat    wt  qsec vs am gear carb
-Mazda RX4           21.0   6 160.0 110 3.90 2.620 16.46  0  1    4    4
-Mazda RX4 Wag       21.0   6 160.0 110 3.90 2.875 17.02  0  1    4    4
-Datsun 710          22.8   4 108.0  93 3.85 2.320 18.61  1  1    4    1
-Hornet 4 Drive      21.4   6 258.0 110 3.08 3.215 19.44  1  0    3    1
-Hornet Sportabout   18.7   8 360.0 175 3.15 3.440 17.02  0  0    3    2
-Valiant             18.1   6 225.0 105 2.76 3.460 20.22  1  0    3    1
-Duster 360          14.3   8 360.0 245 3.21 3.570 15.84  0  0    3    4
-Merc 240D           24.4   4 146.7  62 3.69 3.190 20.00  1  0    4    2
-Merc 230            22.8   4 140.8  95 3.92 3.150 22.90  1  0    4    2
-Merc 280            19.2   6 167.6 123 3.92 3.440 18.30  1  0    4    4
-Merc 280C           17.8   6 167.6 123 3.92 3.440 18.90  1  0    4    4
-Merc 450SE          16.4   8 275.8 180 3.07 4.070 17.40  0  0    3    3
-Merc 450SL          17.3   8 275.8 180 3.07 3.730 17.60  0  0    3    3
-Merc 450SLC         15.2   8 275.8 180 3.07 3.780 18.00  0  0    3    3
-Cadillac Fleetwood  10.4   8 472.0 205 2.93 5.250 17.98  0  0    3    4
-Lincoln Continental 10.4   8 460.0 215 3.00 5.424 17.82  0  0    3    4
-Chrysler Imperial   14.7   8 440.0 230 3.23 5.345 17.42  0  0    3    4
-Fiat 128            32.4   4  78.7  66 4.08 2.200 19.47  1  1    4    1
-Honda Civic         30.4   4  75.7  52 4.93 1.615 18.52  1  1    4    2
-Toyota Corolla      33.9   4  71.1  65 4.22 1.835 19.90  1  1    4    1
-Toyota Corona       21.5   4 120.1  97 3.70 2.465 20.01  1  0    3    1
-Dodge Challenger    15.5   8 318.0 150 2.76 3.520 16.87  0  0    3    2
-AMC Javelin         15.2   8 304.0 150 3.15 3.435 17.30  0  0    3    2
-Camaro Z28          13.3   8 350.0 245 3.73 3.840 15.41  0  0    3    4
-Pontiac Firebird    19.2   8 400.0 175 3.08 3.845 17.05  0  0    3    2
-Fiat X1-9           27.3   4  79.0  66 4.08 1.935 18.90  1  1    4    1
-Porsche 914-2       26.0   4 120.3  91 4.43 2.140 16.70  0  1    5    2
-Lotus Europa        30.4   4  95.1 113 3.77 1.513 16.90  1  1    5    2
-Ford Pantera L      15.8   8 351.0 264 4.22 3.170 14.50  0  1    5    4
-Ferrari Dino        19.7   6 145.0 175 3.62 2.770 15.50  0  1    5    6
-Maserati Bora       15.0   8 301.0 335 3.54 3.570 14.60  0  1    5    8
-Volvo 142E          21.4   4 121.0 109 4.11 2.780 18.60  1  1    4    2</code></pre>
+<pre class="text"><code>angle_noise</code></pre>
+<pre><code>   id absent_angle0 absent_angle4 absent_angle8 present_angle0 present_angle4
+1   1           420           420           480            480            600
+2   2           420           480           480            360            480
+3   3           480           480           540            660            780
+4   4           420           540           540            480            780
+5   5           540           660           540            480            660
+6   6           360           420           360            360            480
+7   7           480           480           600            540            720
+8   8           480           600           660            540            720
+9   9           540           600           540            480            720
+10 10           480           420           540            540            660
+   present_angle8
+1             780
+2             600
+3             780
+4             900
+5             720
+6             540
+7             840
+8             900
+9             780
+10            780</code></pre>
 <script type="application/json" data-opts-chunk="1">{"fig.width":7,"fig.height":5,"fig.retina":2,"fig.align":"default","fig.keep":"high","fig.show":"asis","out.width":672,"warning":true,"error":false,"message":true,"exercise.df_print":"default","exercise.checker":"NULL"}</script>
 </div>
 <div class="tutorial-exercise-support" data-label="print-limit-hint" data-caption="Code" data-completion="1" data-diagnostics="1" data-startover="1" data-lines="0">
-<pre class="text"><code>head(mtcars)</code></pre>
+<pre class="text"><code>head(angle_noise)</code></pre>
 </div>
 <div data-iframe-height="">
 
@@ -245,6 +257,12 @@ Volvo 142E          21.4   4 121.0 109 4.11 2.780 18.60  1  1    4    2</code></
 
 <script type="application/shiny-prerendered" data-context="server-start">
 library(learnr)
+library(tidyr)
+library(afex)
+library(emmeans)
+library(ggplot2)
+angle_noise <- read.csv('angle-noise_wide.csv')
+data(angle_noise)
 knitr::opts_chunk$set(echo = FALSE)
 </script>
  
@@ -271,9 +289,10 @@ output$`tutorial-exercise-print-limit-output` <- renderUI({
 <!--/html_preserve-->
 <!--html_preserve-->
 <script type="application/shiny-prerendered" data-context="execution_dependencies">
-{"type":"list","attributes":{"names":{"type":"character","attributes":{},"value":["packages"]}},"value":[{"type":"list","attributes":{"names":{"type":"character","attributes":{},"value":["packages","version"]},"class":{"type":"character","attributes":{},"value":["data.frame"]},"row.names":{"type":"integer","attributes":{},"value":[1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19,20,21,22,23,24,25,26,27,28,29,30,31,32,33,34,35,36]}},"value":[{"type":"character","attributes":{},"value":["backports","base","compiler","datasets","digest","evaluate","fastmap","graphics","grDevices","htmltools","htmlwidgets","httpuv","jsonlite","knitr","later","learnr","magrittr","markdown","methods","mime","promises","R6","Rcpp","rlang","rmarkdown","rprojroot","shiny","stats","stringi","stringr","tools","utils","withr","xfun","xtable","yaml"]},{"type":"character","attributes":{},"value":["1.1.8","3.6.1","3.6.1","3.6.1","0.6.25","0.14","1.0.1","3.6.1","3.6.1","0.5.0","1.5.1","1.5.4","1.7.0","1.29","1.1.0.1","0.10.1","1.5","1.1","3.6.1","0.9","1.1.1","2.4.1","1.0.5","0.4.7","2.3","1.3-2","1.5.0","3.6.1","1.4.6","1.4.0","3.6.1","3.6.1","2.2.0","0.16","1.8-4","2.2.1"]}]}]}
+{"type":"list","attributes":{"names":{"type":"character","attributes":{},"value":["packages"]}},"value":[{"type":"list","attributes":{"names":{"type":"character","attributes":{},"value":["packages","version"]},"class":{"type":"character","attributes":{},"value":["data.frame"]},"row.names":{"type":"integer","attributes":{},"value":[1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19,20,21,22,23,24,25,26,27,28,29,30,31,32,33,34,35,36,37,38,39,40,41,42,43,44,45,46,47,48,49,50,51,52,53,54,55,56,57,58,59,60,61,62,63,64,65,66,67,68,69,70,71,72,73,74,75,76,77,78,79,80,81,82,83,84,85,86,87,88,89,90,91,92,93,94,95]}},"value":[{"type":"character","attributes":{},"value":["abind","afex","backports","base","boot","car","carData","cellranger","coda","codetools","colorspace","compiler","crayon","curl","data.table","datasets","digest","dplyr","ellipsis","emmeans","estimability","evaluate","fastmap","forcats","foreign","generics","ggplot2","glue","graphics","grDevices","grid","gtable","haven","hms","htmltools","htmlwidgets","httpuv","jsonlite","knitr","later","lattice","learnr","lifecycle","lme4","lmerTest","magrittr","markdown","MASS","Matrix","methods","mime","minqa","multcomp","munsell","mvtnorm","nlme","nloptr","numDeriv","openxlsx","parallel","pillar","pkgconfig","plyr","promises","purrr","R6","Rcpp","readxl","reshape2","rio","rlang","rmarkdown","rprojroot","sandwich","scales","shiny","splines","statmod","stats","stringi","stringr","survival","TH.data","tibble","tidyr","tidyselect","tools","utils","vctrs","withr","xfun","xtable","yaml","zip","zoo"]},{"type":"character","attributes":{},"value":["1.4-5","0.27-2","1.1.8","3.6.1","1.3-25","3.0-9","3.0-4","1.1.0","0.19-3","0.2-16","1.4-1","3.6.1","1.3.4","4.3","1.12.8","3.6.1","0.6.25","1.0.1","0.3.1","1.4.8","1.3","0.14","1.0.1","0.5.0","0.8-75","0.0.2","3.3.2","1.4.1","3.6.1","3.6.1","3.6.1","0.3.0","2.3.1","0.5.3","0.5.0","1.5.1","1.5.4","1.7.0","1.29","1.1.0.1","0.20-41","0.10.1","0.2.0","1.1-23","3.1-2","1.5","1.1","7.3-51.6","1.2-18","3.6.1","0.9","1.2.4","1.4-13","0.5.0","1.1-1","3.1-148","1.2.2.2","2016.8-1.1","4.1.5","3.6.1","1.4.6","2.0.3","1.8.6","1.1.1","0.3.4","2.4.1","1.0.5","1.3.1","1.4.4","0.5.16","0.4.7","2.3","1.3-2","2.5-1","1.1.1","1.5.0","3.6.1","1.4.34","3.6.1","1.4.6","1.4.0","3.2-3","1.0-10","3.0.3","1.1.1","1.1.0","3.6.1","3.6.1","0.3.2","2.2.0","0.16","1.8-4","2.2.1","2.1.0","1.8-8"]}]}]}
 </script>
 <!--/html_preserve-->
+</div>
 </div>
 </div>
 
