--- a/learnr_app1/test1.html
+++ b/learnr_app1/test1.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/iframe-resizer/3.5.16/iframeResizer.contentWindow.min.js" type="text/javascript"></script>
+<script src="https://raw.githubusercontent.com/davidjbradshaw/iframe-resizer/master/js/iframeResizer.min.js" type="text/javascript"></script>
 
 <script type="text/javascript">
 
