--- a/learnr_app1/learnr_app1.html
+++ b/learnr_app1/learnr_app1.html
@@ -14,7 +14,7 @@
 <title>learnr_app1.utf8</title>
 
 <!DOCTYPE html>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/iframe-resizer/3.5.16/iframeResizer.contentWindow.min.js" type="text/javascript"></script>
+<script src="https://raw.githubusercontent.com/davidjbradshaw/iframe-resizer/master/js/iframeResizer.min.js" type="text/javascript"></script>
 
 <script type="text/javascript">
 
